# sailsd

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  appveyor.yml  default.nix  index.html  logging.c  logging.h  params.json  sail_application.c  sail_boat.c  sail_boat.h  sail_boat_draw.c  sail_boat_draw.h  sail_overlay.c  sail_overlay.h  sail_physics.c  sail_physics.h  sail_resources.h.in  sail_view.c  sail_view.h  sail_viewstate.c  sail_viewstate.h  sail_wind.c  sail_wind.h  sailsd.c  sim_application.c  sim_boat.c  sim_boat.h  sim_view.c  sim_view.h  sim_viewstate.c  sim_viewstate.h  simview.c
cmake/modules/: FindGIO.cmake  FindGTK3.cmake  FindRsvg.cmake
resources/: sails.desktop
